Fix: Fixed spacing issue with about skills icons

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
   color: rgb(255, 255, 255);
   line-height: 1.6;
   cursor: default;
-
 }
 
 :root {
@@ -247,7 +246,8 @@ ul {
 .about__skills {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .about__skills-icon {
@@ -299,7 +299,7 @@ ul {
 .project-item-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;  
+  align-items: center;
   border-radius: 10px;
   padding-top: 3em;
   padding-bottom: 0.7em;
@@ -323,7 +323,7 @@ ul {
 
 .projects__item-title {
   font-size: 2rem;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
   position: relative;
   color: transparent;
   -webkit-text-fill-color: transparent;
@@ -476,6 +476,31 @@ ul {
   /* maybe will edit in future, most devies are 320px + */
 }
 
+@media (max-width: 990px) {
+
+  /* Projects */
+  .project-item-container {
+    padding-bottom: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .first-project {
+    margin-top: 1em;
+  }
+
+  .projects__list {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .project-item-left,
+  .project-item-right {
+    flex-basis: 100%;
+  }
+}
+
 @media (min-width: 768px) {
   .nav__list {
     display: flex;
@@ -543,7 +568,6 @@ ul {
     backdrop-filter: blur(20px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.692);
-
   }
 
   .nav__link {
@@ -559,7 +583,6 @@ ul {
     transform: translateY(-100%);
     transition: transform 0.3s ease;
   }
-  
 
   /* Main */
   .main {
@@ -679,6 +702,10 @@ ul {
     padding-bottom: 2em;
     display: flex;
     justify-content: space-around;
+  }
+
+  .first-project {
+    margin-top: 1em;
   }
 
   .projects__list {
@@ -888,6 +915,10 @@ ul {
   .projects__list {
     width: 90%;
     margin: 0 auto;
+  }
+
+  .first-project {
+    margin-top: -7em;
   }
 
   .project-item-right {
